# nodc-calculations

./: .gitignore  README.md  pyproject.toml
src/nodc_calculations/: calculate.py  convert.py
tests/: test_calculate.py
