[project]
name = "nodc-calculations"
version = "0.1.0"
description = "Functions to calculate physical, chemical and biological in the marine envrionment"
authors = [
    {name = "Lena Viktorsson", email = "lena.viktorsson@smhi.se"},
]
dependencies = [
    "pandas>=2.2.3",
    "seawater>=3.3.5",
    "gsw>=3.6.19",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.3.3",
]
