[project]
name = "nodc-calculations"
version = "v2025.1.0"
description = "Functions to calculate physical, chemical and biological in the marine envrionment"
authors = [
    {name = "Lena Viktorsson", email = "lena.viktorsson@smhi.se"},
]
dependencies = [
    "pandas>=2.2.3",
    "seawater>=3.3.5",
    "gsw>=3.6.19",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3"
]